added the spash for the project

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,7 @@
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
+  --color-primary: #ee7e06;
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.205 0 0);
@@ -120,4 +121,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+html {
+  font-family: poppins, "sans-serif";
 }
