--- a/src/index.css
+++ b/src/index.css
@@ -191,3 +191,12 @@ html {
 *::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
+
+@keyframes pulse {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+}
